--- a/Tutorial_Numpy.ipynb
+++ b/Tutorial_Numpy.ipynb
@@ -4644,8 +4644,38 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[18 21 25 30]\n",
+            "[12 18 20]\n",
+            "[5 7 3 9]\n",
+            "[ 5 12  0 18 25]\n",
+            "[12 18]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "edades = np.array([15, 18, 21, 16, 25, 30, 17])\n",
+        "\n",
+        "print(edades[edades >= 18])\n",
+        "\n",
+        "numeros = np.array([5, 12, 7, 18, 20, 3, 9])\n",
+        "print(numeros[numeros & 1 == 0]) # pares\n",
+        "print(numeros[numeros & 1 == 1]) # impares\n",
+        "\n",
+        "temperaturas = np.array([-2, 5, 12, 0, 18, 25, -1])\n",
+        "\n",
+        "print(temperaturas[temperaturas >= 0])\n",
+        "print(temperaturas[(temperaturas >= 10) & (temperaturas <= 20)])\n",
+        "\n",
+        "# Ventaja de usar filtros de numpy es que es mas eficiente al utilizar numpy y tambien mas declarativo\n",
+        "# Limpiar datos erroneos nulos o outliers"
+      ]
     },
     {
       "cell_type": "markdown",
