--- a/Tutorial_Pandas.ipynb
+++ b/Tutorial_Pandas.ipynb
@@ -1259,11 +1259,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "TET-pKh6F1Ga"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "KeyError",
+          "evalue": "'department'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+            "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+            "\u001b[31mKeyError\u001b[39m: 'department'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[42]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m it = df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdepartment\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[33m\"\u001b[39m\u001b[33mIT\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(it)\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+            "\u001b[31mKeyError\u001b[39m: 'department'"
+          ]
+        }
+      ],
       "source": [
         "it = df[df[\"department\"] == \"IT\"]\n",
         "print(it)"
@@ -1367,7 +1389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "DksO8hxkpKMN"
       },
@@ -1382,8 +1404,8 @@
         }
       ],
       "source": [
-        "print(len(pukimones.columns))\n",
-        "print(len(pukimones))"
+        "print(len(pukimones.columns)) # columnas\n",
+        "print(len(pukimones)) # filas"
       ]
     },
     {
@@ -1399,12 +1421,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "_eeyFpY_pMCG"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Index(['#', 'Name', 'Type 1', 'Type 2', 'Total', 'HP', 'Attack', 'Defense',\n",
+            "       'Sp. Atk', 'Sp. Def', 'Speed', 'Generation', 'Legendary'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(pukimones.columns)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1433,12 +1467,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "5tZAvlF0pQm2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "#                     1\n",
+            "Name          Bulbasaur\n",
+            "Type 1            Grass\n",
+            "Type 2           Poison\n",
+            "Total               318\n",
+            "HP                   45\n",
+            "Attack               49\n",
+            "Defense              49\n",
+            "Sp. Atk              65\n",
+            "Sp. Def              65\n",
+            "Speed                45\n",
+            "Generation            1\n",
+            "Legendary         False\n",
+            "Name: Bulbasaur, dtype: object\n",
+            "           #       Name Type 1  Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
+            "Name                                                                          \n",
+            "Bulbasaur  1  Bulbasaur  Grass  Poison    318  45      49       49       65   \n",
+            "Ivysaur    2    Ivysaur  Grass  Poison    405  60      62       63       80   \n",
+            "Venusaur   3   Venusaur  Grass  Poison    525  80      82       83      100   \n",
+            "\n",
+            "           Sp. Def  Speed  Generation  Legendary  \n",
+            "Name                                              \n",
+            "Bulbasaur       65     45           1      False  \n",
+            "Ivysaur         80     60           1      False  \n",
+            "Venusaur       100     80           1      False  \n",
+            "                                        Name  Attack\n",
+            "Name                                                \n",
+            "Bulbasaur                          Bulbasaur      49\n",
+            "Ivysaur                              Ivysaur      62\n",
+            "Venusaur                            Venusaur      82\n",
+            "VenusaurMega Venusaur  VenusaurMega Venusaur     100\n",
+            "Charmander                        Charmander      52\n",
+            "...                                      ...     ...\n",
+            "Diancie                              Diancie     100\n",
+            "DiancieMega Diancie      DiancieMega Diancie     160\n",
+            "HoopaHoopa Confined      HoopaHoopa Confined     110\n",
+            "HoopaHoopa Unbound        HoopaHoopa Unbound     160\n",
+            "Volcanion                          Volcanion     110\n",
+            "\n",
+            "[800 rows x 2 columns]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(pukimones.iloc[0])\n",
+        "print(pukimones.iloc[:3])\n",
+        "print(pukimones[[\"Name\", \"Attack\"]])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1455,12 +1540,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "wT_5VGphpQ3I"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "#                     1\n",
+            "Name          Bulbasaur\n",
+            "Type 1            Grass\n",
+            "Type 2           Poison\n",
+            "Total               318\n",
+            "HP                   45\n",
+            "Attack               49\n",
+            "Defense              49\n",
+            "Sp. Atk              65\n",
+            "Sp. Def              65\n",
+            "Speed                45\n",
+            "Generation            1\n",
+            "Legendary         False\n",
+            "Name: Bulbasaur, dtype: object\n"
+          ]
+        }
+      ],
+      "source": [
+        "pukimones.set_index(\"Name\", inplace=True, drop=False)\n",
+        "print(pukimones.loc[\"Bulbasaur\"])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1475,12 +1584,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "kmwH2BRZpRFe"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Type 1\n",
+            "Bug          70.971014\n",
+            "Dark         88.387097\n",
+            "Dragon      112.125000\n",
+            "Electric     69.090909\n",
+            "Fairy        61.529412\n",
+            "Fighting     96.777778\n",
+            "Fire         84.769231\n",
+            "Flying       78.750000\n",
+            "Ghost        73.781250\n",
+            "Grass        73.214286\n",
+            "Ground       95.750000\n",
+            "Ice          72.750000\n",
+            "Normal       73.469388\n",
+            "Poison       74.678571\n",
+            "Psychic      71.456140\n",
+            "Rock         92.863636\n",
+            "Steel        92.703704\n",
+            "Water        74.151786\n",
+            "Name: Attack, dtype: float64\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(pukimones.groupby(\"Type 1\")[\"Attack\"].mean())"
+      ]
     },
     {
       "cell_type": "markdown",
