--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "2c9d363d",
    "metadata": {},
    "outputs": [
@@ -514,11 +514,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
+   "id": "7d81b0c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5582087398060173\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.rand(30).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "4ea995d6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37043635742754294\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.rand(30)\n",
+    "print(arr.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -530,11 +559,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "7054464b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 1.]\n",
+      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.zeros(30)\n",
+    "arr[0] = 1\n",
+    "arr[-1] = 1\n",
+    "print(arr)\n",
+    "arr = np.array([1, *np.zeros(28), 1])\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -546,11 +593,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "id": "4f0212af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.99680919 0.2323141  0.85502026 0.34196223 0.54663358\n",
+      " 0.07151927 0.96444088 0.29814607 0.30669773 0.80232916 0.47976199\n",
+      " 0.1230874  0.73269984 0.49700425 0.35919446 0.67376076 0.0483749\n",
+      " 0.69004729 0.69224815 0.20716787 0.70663893 0.0116401  0.8098751\n",
+      " 0.09897393 0.51408826 0.96724714 0.53839595 0.58393019 0.4169959\n",
+      " 0.70250799 0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.rand(30)\n",
+    "print(np.pad(arr, 1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -570,11 +633,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "cfdb7352",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "False\n",
+      "False\n",
+      "nan\n",
+      "True\n",
+      "0.3\n",
+      "0.30000000000000004\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0 * np.nan)\n",
+    "print(np.nan == np.nan)\n",
+    "print(np.inf > np.nan)\n",
+    "print(np.nan - np.nan)\n",
+    "print(np.nan in set([np.nan]))\n",
+    "print(0.3)\n",
+    "print(3 * 0.1)\n",
+    "print(0.3 == 3 * 0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,11 +673,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "id": "4e97651a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4 5]\n",
+      " [1 2 3 4 5]\n",
+      " [1 2 3 4 5]\n",
+      " [1 2 3 4 5]\n",
+      " [1 2 3 4 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.tril(np.arange(1, 6), 4)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
