--- a/Tutorial_Numpy.ipynb
+++ b/Tutorial_Numpy.ipynb
@@ -819,7 +819,8 @@
         "arr = np.array([[1, 2, 3, 4, 5],\n",
         "                [6, 7, 8, 9, 10]])\n",
         "\n",
-        "print(\"2º elemento de la 1ª fila:\", arr[0][1])\n"
+        "print(\"2º elemento de la 1ª fila:\", arr[0][1])\n",
+        "print(\"2º elemento de la 1ª fila:\", arr[0, 1])\n"
       ]
     },
     {
@@ -1127,7 +1128,7 @@
         }
       ],
       "source": [
-        "array2 = array[array > 30]  # Filtrar elementos mayores que 30\n",
+        "array2 = array[array2 > 30]  # Filtrar elementos mayores que 30\n",
         "array2"
       ]
     },
